find a space fix

--- a/projects/topomojo-work/src/app/home/home.component.html
+++ b/projects/topomojo-work/src/app/home/home.component.html
@@ -15,7 +15,7 @@
     </p>
 
     <!-- Browse your workspaces in the side bar, or create a new one (permission required). -->
-    <button class="btn btn-outline-secondary btn-lg mb-2" (click)="openSidebar()">
+    <button class="btn btn-outline-secondary btn-lg mb-2" (click)="openSidebar($event)">
       <fa-icon [icon]="faChevronLeft"></fa-icon>
       <fa-icon [icon]="faChevronLeft"></fa-icon>
       <span>Find A Space</span>
