--- a/projects/topomojo-work/src/app/admin/setting-browser/setting-browser.component.html
+++ b/projects/topomojo-work/src/app/admin/setting-browser/setting-browser.component.html
@@ -20,15 +20,15 @@
         placement="right"
         container="body"
         triggers="hover focus"
-        [tooltip]="'Choose an image file (PNG/JPG/etc.). After selecting, you’ll see a preview below.'"
-        aria-label="Choose an image file (PNG/JPG/etc.). After selecting, you’ll see a preview below."
+        [tooltip]="'Choose an image file. After selecting, you’ll see a preview below.'"
+        aria-label="Choose an image file. After selecting, you’ll see a preview below."
       >
         <fa-icon [icon]="faInfoCircle"></fa-icon>
       </span>
     </label>
 
     <small class="text-muted d-block mb-1">
-      Tip: wide images usually work best as a background.
+      Tip: Wide images usually work best as a background.
     </small>
 
     <label class="file-drop form-control" for="background-upload">
