--- a/projects/topomojo-work/src/app/admin/vm-browser/vm-browser.component.html
+++ b/projects/topomojo-work/src/app/admin/vm-browser/vm-browser.component.html
@@ -3,7 +3,7 @@
 
 <h4>Machines</h4>
 <div class="text-muted mb-2">
-  View all VMs TopoMojo is tracking and the gamespaces they belong to. This is a read-only listing (you can’t control
+  View all VMs TopoMojo is tracking and the gamespaces/workspaces they belong to. This is a read-only listing (you can’t control
   VMs from here). Use Search to find VMs by name, group, host, or paste a gamespace GUID.
 </div>
 
