--- a/projects/topomojo-work/src/app/app-layout/app-layout.component.html
+++ b/projects/topomojo-work/src/app/app-layout/app-layout.component.html
@@ -34,7 +34,7 @@
                 [class.sidebar-in]="!open">
 
             <div [hidden]="open"
-                class="text-secondary m-3"
+                class="text-secondary m-2 sidebar-toggle"
                 (click)="toggleSidebar()">
             <fa-icon [icon]="faBars" size="lg"></fa-icon>
             </div>
