--- a/projects/topomojo-work/src/app/workspace-browser/workspace-browser.component.html
+++ b/projects/topomojo-work/src/app/workspace-browser/workspace-browser.component.html
@@ -48,7 +48,7 @@
         [tooltip]="'Gamespaces you can play. Read-only copies of workspaces you can launch or join to complete labs.'"
         container="body"
         triggers="hover focus"
-        placement="right"
+        placement="left"
         aria-label="Info: Gamespaces you can play. Read-only copies of workspaces you can launch or join to complete labs."
         (click)="$event.stopPropagation()"
       ></fa-icon>
