--- a/projects/topomojo-work/src/styles.scss
+++ b/projects/topomojo-work/src/styles.scss
@@ -205,3 +205,12 @@ html.has-bg-image .tm-page-card {
   box-shadow: 0 10px 30px rgba(0,0,0,0.08);
   padding: 2rem;
 }
+
+.favorite-on {
+  color: #ffc107;
+}
+
+.favorite-off {
+  color: #6c757d;
+}
+
