--- a/projects/topomojo-work/src/app/settings-editor/settings-editor.component.scss
+++ b/projects/topomojo-work/src/app/settings-editor/settings-editor.component.scss
@@ -1,4 +1,4 @@
 .workspace-stats {
-  background-color: rgba(21, 53, 111, 0.08);
-  border-color: #043673 !important;
+  background-color: rgba(21, 53, 111, 0.04);
+  border-color: rgba(4, 54, 115, 0.35) !important;
 }
