--- a/projects/topomojo-work/src/app/challenge-editor/challenge-editor.component.html
+++ b/projects/topomojo-work/src/app/challenge-editor/challenge-editor.component.html
@@ -3,7 +3,7 @@
 
 <div class="mb-2">
   <div class="text-muted">
-    Use this tab to define transforms (dynamic variables), add challenge Markdown, and configure variants with
+    Define transforms (dynamic variables), add challenge Markdown, and configure variants with
     questions and answers. At deploy time, TopoMojo replaces any <code>##key##</code> tokens with generated values.
   </div>
 </div>
