--- a/projects/topomojo-work/src/app/settings-editor/settings-editor.component.html
+++ b/projects/topomojo-work/src/app/settings-editor/settings-editor.component.html
@@ -22,7 +22,7 @@
 
 <div>
   <div class="text-muted">
-    Use this tab to manage the workspace metadata: how it's labeled, described, who it's attributed to, who can
+    Manage the workspace metadata: how it's labeled, described, who it's attributed to, who can
     launch it, and how long it's expected to take.
   </div>
 </div>
