--- a/projects/topomojo-work/src/app/template-selector/template-selector.component.html
+++ b/projects/topomojo-work/src/app/template-selector/template-selector.component.html
@@ -3,7 +3,7 @@
 
 <div>
   <div class="text-muted">
-    Use this tab to add “starting point” virtual machine templates to your workspace. You can add blank disk templates
+    Add “starting point” virtual machine templates to your workspace. You can add blank disk templates
     to install your own OS, or select templates with operating systems pre-installed, then edit them to fit your topology.
   </div>
 </div>
